feat(backend): add auth ownership and shopping list idempotency