@@ -1,34 +1,56 @@
 package com.appcompras.shopping;
 
 import com.appcompras.domain.ShoppingListItem;
+import com.appcompras.security.CurrentUserProvider;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Service
 public class ShoppingListDraftService {
 
     private final ShoppingListDraftRepository shoppingListDraftRepository;
+    private final CurrentUserProvider currentUserProvider;
 
-    public ShoppingListDraftService(ShoppingListDraftRepository shoppingListDraftRepository) {
+    public ShoppingListDraftService(
+            ShoppingListDraftRepository shoppingListDraftRepository,
+            CurrentUserProvider currentUserProvider
+    ) {
         this.shoppingListDraftRepository = shoppingListDraftRepository;
+        this.currentUserProvider = currentUserProvider;
     }
 
     @Transactional
-    public ShoppingListDraft createFromGenerated(String planId, List<ShoppingListItem> generatedItems) {
+    public ShoppingListDraft createFromGenerated(String planId, List<ShoppingListItem> generatedItems, String idempotencyKey) {
+        String userId = currentUserProvider.getCurrentUserId();
+        String normalizedIdempotencyKey = normalizeIdempotencyKey(idempotencyKey);
+        if (normalizedIdempotencyKey != null) {
+            Optional<ShoppingListDraftEntity> existing = shoppingListDraftRepository
+                    .findTopByUserIdAndPlanIdAndIdempotencyKeyOrderByCreatedAtDesc(
+                            userId, planId, normalizedIdempotencyKey);
+            if (existing.isPresent()) {
+                return ShoppingListDraftEntityMapper.toDomain(existing.get());
+            }
+        }
+
         Instant now = Instant.now();
 
         ShoppingListDraftEntity entity = new ShoppingListDraftEntity();
         entity.setId(UUID.randomUUID().toString());
+        entity.setUserId(userId);
         entity.setPlanId(planId);
-        entity.setItems(ShoppingListDraftEntityMapper.toEmbeddables(
-                generatedItems.stream().map(this::toDraftItem).toList()
-        ));
+        entity.setIdempotencyKey(normalizedIdempotencyKey);
+        List<ShoppingListDraftItem> generatedDraftItems = new ArrayList<>();
+        for (int i = 0; i < generatedItems.size(); i++) {
+            generatedDraftItems.add(toDraftItem(generatedItems.get(i), i));
+        }
+        entity.setItems(ShoppingListDraftEntityMapper.toEmbeddables(generatedDraftItems));
         entity.setCreatedAt(now);
         entity.setUpdatedAt(now);
 
@@ -38,27 +60,32 @@ public class ShoppingListDraftService {
 
     @Transactional(readOnly = true)
     public Optional<ShoppingListDraft> findById(String id) {
-        return shoppingListDraftRepository.findById(id)
+        String userId = currentUserProvider.getCurrentUserId();
+        return shoppingListDraftRepository.findByIdAndUserId(id, userId)
                 .map(ShoppingListDraftEntityMapper::toDomain);
     }
 
     @Transactional(readOnly = true)
     public List<ShoppingListDraft> findAll() {
-        return shoppingListDraftRepository.findAllByOrderByCreatedAtDescIdAsc().stream()
+        String userId = currentUserProvider.getCurrentUserId();
+        return shoppingListDraftRepository.findAllByUserIdOrderByCreatedAtDescIdAsc(userId).stream()
                 .map(ShoppingListDraftEntityMapper::toDomain)
                 .toList();
     }
 
     @Transactional
     public Optional<ShoppingListDraft> replaceItems(String id, UpdateShoppingListRequest request) {
-        Optional<ShoppingListDraftEntity> existingOpt = shoppingListDraftRepository.findById(id);
+        String userId = currentUserProvider.getCurrentUserId();
+        Optional<ShoppingListDraftEntity> existingOpt = shoppingListDraftRepository.findByIdAndUserId(id, userId);
         if (existingOpt.isEmpty()) {
             return Optional.empty();
         }
 
         ShoppingListDraftEntity existing = existingOpt.get();
         existing.setItems(ShoppingListDraftEntityMapper.toEmbeddables(
-                request.items().stream().map(this::fromRequestItem).collect(Collectors.toList())
+                IntStream.range(0, request.items().size())
+                        .mapToObj(i -> fromRequestItem(request.items().get(i), i))
+                        .toList()
         ));
         existing.setUpdatedAt(Instant.now());
 
@@ -68,14 +95,16 @@ public class ShoppingListDraftService {
 
     @Transactional
     public boolean deleteById(String id) {
-        if (!shoppingListDraftRepository.existsById(id)) {
+        String userId = currentUserProvider.getCurrentUserId();
+        Optional<ShoppingListDraftEntity> existingOpt = shoppingListDraftRepository.findByIdAndUserId(id, userId);
+        if (existingOpt.isEmpty()) {
             return false;
         }
-        shoppingListDraftRepository.deleteById(id);
+        shoppingListDraftRepository.delete(existingOpt.get());
         return true;
     }
 
-    private ShoppingListDraftItem toDraftItem(ShoppingListItem item) {
+    private ShoppingListDraftItem toDraftItem(ShoppingListItem item, int index) {
         return new ShoppingListDraftItem(
                 UUID.randomUUID().toString(),
                 item.ingredientId(),
@@ -85,11 +114,14 @@ public class ShoppingListDraftService {
                 item.suggestedPackages(),
                 item.packageAmount(),
                 item.packageUnit().name(),
-                false
+                false,
+                false,
+                null,
+                index
         );
     }
 
-    private ShoppingListDraftItem fromRequestItem(UpdateShoppingListRequest.ItemInput item) {
+    private ShoppingListDraftItem fromRequestItem(UpdateShoppingListRequest.ItemInput item, int index) {
         return new ShoppingListDraftItem(
                 item.id() == null || item.id().isBlank() ? UUID.randomUUID().toString() : item.id(),
                 item.ingredientId(),
@@ -99,7 +131,18 @@ public class ShoppingListDraftService {
                 item.suggestedPackages(),
                 item.packageAmount(),
                 item.packageUnit(),
-                item.manual()
+                item.manual(),
+                item.bought() != null && item.bought(),
+                item.note() == null ? null : item.note().trim(),
+                item.sortOrder() == null ? index : item.sortOrder()
         );
+    }
+
+    private String normalizeIdempotencyKey(String value) {
+        if (value == null) {
+            return null;
+        }
+        String normalized = value.trim();
+        return normalized.isEmpty() ? null : normalized;
     }
 }
